<resources>
    <string name="app_name">Authentication</string>
    <string name="logo_txt">Смейся  \nи улыбайся каждый день</string>
    <string name="sign_in">Есть аккаунт? Войти</string>
    <string name="start_use">Начать пользоваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="entrance">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="password_reset">Сброс пароля</string>
    <string name="next">Далее</string>
    <string name="email_sent">На вашу почту \n«dojacat01.gmail.com» было \nотправлено письмо</string>
    <string name="close">Закрыть</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Номер телефона</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password_check_symbols">• Заглавная буква \n• Цифры \n• Специальные символы \n• Совпадение пароля </string>
</resources>