<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PasswordResetFragment">


    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/reset_title_txt"
        app:layout_constraintBottom_toBottomOf="@id/reset_title_txt"
        android:src="@drawable/backspace"
        android:background="@drawable/fields_back"
        android:layout_marginStart="30dp"/>


    <TextView
        android:id="@+id/reset_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gothampro_medium"
        android:text="@string/password_reset"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_title_txt"
        android:layout_marginTop="20dp"
        android:padding="30dp">
    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothampro_medium"
        android:lineSpacingExtra="10dp"
        android:text="@string/logo_txt"
        android:textColor="@color/main_blue"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_alignEnd="@+id/title_txt"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_email"
        style="@style/fields_input_style"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/next_btn"
        style="@style/btn_login_style"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <!-- Create the state of the button here - change the bg color also incorrect password   -->



</androidx.constraintlayout.widget.ConstraintLayout>