<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/white">

    <ImageView
        android:id="@+id/splash_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/splash_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_icon"
        android:text="@string/logo_txt"
        android:textColor="@color/main_blue"
        android:fontFamily="@font/gothampro_medium"
        android:textSize="40sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:lineSpacingExtra="10dp"
        />

    <Button
        android:id="@+id/btn_start"
        android:text="@string/start_use"
        style="@style/PrimaryButtonStyle"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/gothampro_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>