<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreatePasswordFragment">

    <RelativeLayout
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/fields_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/gothampro_medium"
            android:hint="@string/create_password"
            android:inputType="numberPassword"
            android:padding="14dp"
            android:textColorHint="@color/light_hint_gray"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/hide_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:src="@drawable/password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/fields_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_new">

        <EditText
            android:id="@+id/et_password_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/gothampro_medium"
            android:hint="@string/repeat_password"
            android:inputType="numberPassword"
            android:padding="14dp"
            android:textColorHint="@color/light_hint_gray"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/hide_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:src="@drawable/password" />
    </RelativeLayout>

    <TextView
        android:id="@+id/symbols_check_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothampro_medium"
        android:textColor="@color/light_hint_gray"
        android:textSize="16sp"
        android:lineSpacingExtra="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/password_check"
        android:text="@string/password_check_symbols"/>

    <Button
        android:id="@+id/btn_start"
        android:text="@string/next"
        style="@style/PrimaryButtonStyleUnpress"
        app:backgroundTint="@null"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/symbols_check_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>